--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,3 @@
 server.port=8087
 
- spring.datasource.url=jdbc:mysql://localhost:3306/satya_app_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-
- spring.datasource.username=root
- spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-logging.level.org.springframework=DEBUG
+ spring.profiles.active=dev
