--- a/src/main/resources/application.prod.properties
+++ b/src/main/resources/application.prod.properties
@@ -1,7 +1,7 @@
- spring.datasource.url=jdbc:mysql://localhost:3306/satya_app_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+ spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51286/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 
  spring.datasource.username=root
- spring.datasource.password=root
+ spring.datasource.password=6fh25GBDH44ad1F5AahBHgFD4BGFgHea
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
