--- a/src/main/resources/application.prod.properties
+++ b/src/main/resources/application.prod.properties
@@ -1,4 +1,4 @@
- spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51286/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+ spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51286/railway
 
  spring.datasource.username=root
  spring.datasource.password=6fh25GBDH44ad1F5AahBHgFD4BGFgHea
